updated for NQueens problem and some recursion problems